# kdbx-git

./: .gitignore  Cargo.toml  Dockerfile  KEEGATE_API.md  README.md  ROADMAP.md  SPEC.md  SPEC_NEW.md  WEB_UI.md
common/: Cargo.toml
common/src/: database.rs  kdbx.rs  lib.rs  store.rs
common/src/storage/: types.rs
core/: Cargo.toml
core/src/storage/: convert.rs  format.rs
keegate-api/: Cargo.toml
keegate-api/src/: lib.rs
keegate-client/: Cargo.toml  QUICKSTART.md
keegate-client/src/: lib.rs
scripts/: entry-history.nu  example.nu
server/: Cargo.toml  build.rs
server/src/: config.rs  init.rs  keegate.rs  lib.rs  server.rs  sync_state.rs
server/src/server/: auth.rs  dav.rs  http.rs  keegate.rs  push.rs  state.rs  web_ui.rs
server/tests/: end_to_end.rs  kdbx_compat.rs  local_sync.rs
server/tests/common/: mod.rs
server/tests/end_to_end/: integrity.rs  keegate.rs  push.rs  sync.rs  web_ui.rs  webdav.rs
src/: config.rs  init.rs  kdbx.rs  lib.rs  main.rs  server.rs  store.rs  sync.rs
src/storage/: convert.rs  format.rs  mod.rs  types.rs
storage-types/: Cargo.toml
storage-types/src/: lib.rs
sync-local/: Cargo.toml
sync-local/src/: config.rs  lib.rs  main.rs  sync.rs
tests/: E2E_TEST.md  end_to_end.rs  kdbx_compat.rs  local_sync.rs
tests/common/: mod.rs
tests/end_to_end/: integrity.rs
web-ui/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  svelte.config.js
web-ui/rust-src/: lib.rs
web-ui/src/lib/: api.ts  session.ts
web-ui/src/lib/components/ui/badge/: badge.svelte
web-ui/src/lib/components/ui/button/: button.svelte
web-ui/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-header.svelte  card-title.svelte  card.svelte
web-ui/src/lib/components/ui/input/: input.svelte
web-ui/src/lib/components/ui/label/: label.svelte
web-ui/src/routes/: +layout.svelte  +page.svelte  layout.css
web-ui/src/routes/login/: +page.svelte
