[workspace]
members = ["server", "common", "keegate-api", "keegate-client", "sync-local", "web-ui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
argon2 = { package = "rust-argon2", version = "3.0" }
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header", "cookie-private"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
color-eyre = "0.6"
dav-server = "0.11"
eyre = "0.6"
futures-util = "0.3"
gix = "0.70"
http = "1"
jwt-simple = { version = "0.12.11", default-features = false, features = ["pure-rust"] }
keepass = { git = "https://github.com/null-dev/keepass-nd", features = ["save_kdbx4", "_merge"] }
mime_guess = "2"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
web-push = { version = "0.11.0", default-features = false }

kdbx-git-common = { path = "common" }
kdbx-git-keegate-api = { path = "keegate-api" }
kdbx-git-keegate-client = { path = "keegate-client" }
kdbx-git-sync-local = { path = "sync-local" }
kdbx-git-web-ui = { path = "web-ui" }

serial_test = "3"
tempfile = "3"

[profile.dev]
split-debuginfo = "unpacked"
