[package]
name = "kdbx-git-core"
version.workspace = true
edition.workspace = true

[dependencies]
argon2.workspace = true
kdbx-git-storage-types.workspace = true
base64.workspace = true
chrono.workspace = true
eyre.workspace = true
gix.workspace = true
keepass.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
