[package]
name = "kdbx-git"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
cookie.workspace = true
color-eyre.workspace = true
dav-server.workspace = true
eyre.workspace = true
futures-util.workspace = true
gix.workspace = true
http.workspace = true
jwt-simple.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
web-push.workspace = true

kdbx-git-core.workspace = true
kdbx-git-keegate-api.workspace = true
kdbx-git-keegate-client.workspace = true
kdbx-git-web-ui.workspace = true

[dev-dependencies]
axum.workspace = true
clap.workspace = true
color-eyre.workspace = true
futures-util.workspace = true
http.workspace = true
keepass.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true

kdbx-git-sync-local.workspace = true
