[package]
name = "kdbx-git-sync-local"
version.workspace = true
edition.workspace = true

[dependencies]
color-eyre.workspace = true
eyre.workspace = true
futures-util.workspace = true
notify.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
